# remote_display_viewer

./: CMakeLists.txt  README.md  go.mod  remote_display_server.go
cmd/remote_display_server/: main.go  remote_display_view_test.cc
cmd/remote_display_server/static/: index.html
doc/: remote_display_viewer.drawio
internal/screencapture/: rgb.go  screen_capture.cc  screen_capture.h  screen_capture_bind.go  screen_capture_bridge.cc  screen_capture_bridge.h
internal/server/: logger.go  server.go
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/gorilla/: mux@v1.8.0
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x016/988.p/: 216
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/1/066.p/: 92
pkg/sumdb/sum.golang.org/: latest
screen_capture/: display.cc  display.h  screen_capture.cc  screen_capture.h  screen_capture_bind.go  screen_capture_bridge.cc  screen_capture_bridge.h
src/: remote_display_view.cc
src/base/: debug_window.h  geometry.h  time.h
src/net/: epoll.cc  epoll.h  http_request.h  server.cc  server.h  session.cc  session.h  socket.cc  socket.h
src/net/http/: request.h  response.h  util.h
src/screen_capture/: debug_window_X11.cc  debug_window_X11.h  display.cc  display.h  display_X11.cc  display_X11.h  screen_capture.cc  screen_capture.h  screen_capture_X11.cc  screen_capture_X11.h  screen_capture_bridge.cc  screen_capture_bridge.h
static/: index.html
